--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-#server.port=9090
-#spring.data.mongodb.database=Patient
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port = 27017
+server.port=8085
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.hibernate.ddl-auto=create-drop
