Add and Remove files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://database-1.che1frek498q.us-east-1.rds.amazonaws.com:5432/postgres
 #spring.datasource.username=postgres
-#spring.datasource.password=postgres
+#spring.datasource.password=Sudha@123
 #spring.jpa.hibernate.ddl-auto=create-drop
